add favorite enpoint and database
